--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 }
 
 :root {
-  --cor-principla-texto: rgb(27, 27, 27);
+  --cor-principal-texto: rgb(27, 27, 27);
+  --laranja-principal: orange;
 }
 
 a {
@@ -20,7 +21,7 @@ a {
   justify-content: space-between;
   align-items: center;
   height: 60px;
-  background-color: orange;
+  background-color: #ffa500;
   box-shadow: rgba(216, 149, 25, 0.322) 0px 3px 2px;
   position: sticky;
   top: 0;
@@ -45,8 +46,12 @@ a {
   background-color: transparent;
 }
 
-.link__contato {
+.link__item-header {
   margin-right: 15px;
+  background-color: transparent;
+}
+
+.item__ancora {
   background-color: transparent;
   font-size: 22px;
   color: white;
@@ -56,7 +61,7 @@ a {
   margin-top: 35px;
   margin-left: 15px;
   width: 90vw;
-  color: var(--cor-principla-texto);
+  color: var(--cor-principal-texto);
 }
 
 .introducao__titulo {
@@ -89,7 +94,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: orange;
+  background-color: #3315b0;
   margin-top: 10px;
   width: 150px;
   height: 40px;
@@ -97,12 +102,14 @@ a {
   font-size: 25px;
   font-weight: 600;
   border-radius: 10px;
-  border: rgb(151, 100, 5) 3px solid;
+  border: #270f88 3px solid;
   transition: 0.3s;
 }
 
 .idoso__link:hover {
-  background-color: rgb(255, 188, 2);
+  background-color: #270f88;
+  font-size: 27px;
+  width: 165px;
 }
 
 .card__cuidador {
@@ -132,7 +139,7 @@ a {
   margin-left: 15px;
   width: 90vw;
   font-size: 20px;
-  color: var(--cor-principla-texto);
+  color: var(--cor-principal-texto);
 }
 
 .conteudo__lista {
@@ -146,4 +153,50 @@ a {
 .lista__item {
   margin-top: 15px;
   margin-left: 15px;
+}
+
+.conteudo__titulo {
+  margin-left: 15px;
+  margin-top: 30px;
+}
+
+.conteudo__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15px;
+  margin-top: 15px;
+  background-color: #3315b0;
+  width: 150px;
+  height: 35px;
+  color: white;
+  font-size: 25px;
+}
+
+.footer {
+  margin-top: 50px;
+  background-color: rgba(26, 24, 24, 0.822);
+}
+
+.--background-transparente {
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.788);
+}
+
+.--background-transparente:hover {
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+.footer__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+}
+
+.footer__conteudo {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 30px;
 }
