add base do carousel na home

--- a/views/idoso.html
+++ b/views/idoso.html
@@ -7,6 +7,6 @@
     <title>Aging</title>
 </head>
 <body>
-    <!-- <h1>o que devemos fazer aqui?</h1> -->
+    <h1>Formulário simples</h1>
 </body>
 </html>
