--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   font-size: 20px;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 :root {
   --cor-principal-texto: rgb(27, 27, 27);
   --laranja-principal: orange;
@@ -134,30 +138,62 @@ a {
   width: 90vw;
 }
 
-.conteudo {
-  margin-top: 35px;
-  margin-left: 15px;
-  width: 90vw;
-  font-size: 20px;
-  color: var(--cor-principal-texto);
+.container__carousel {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  width: 150vw;
+  height: 400px;
+  margin-left: -15px;
 }
 
-.conteudo__lista {
-  margin-left: 15px;
+.carousel__seta-esquerda {
+  position: absolute;
+  left: 50px;
+  height: 40px;
+  width: 40px;
+  border-left: 10px solid #082141;
+  border-bottom: 10px solid #082141;
+  background: transparent;
+  transform: rotate(45deg);
 }
 
-.conteudo__lista li::marker {
-  color: orange;
+.carousel__seta-direita {
+  position: absolute;
+  left: 93vw;
+  height: 40px;
+  width: 40px;
+  border-right: 10px solid #082141;
+  border-bottom: 10px solid #082141;
+  background: transparent;
+  transform: rotate(-45deg);
 }
 
-.lista__item {
-  margin-top: 15px;
-  margin-left: 15px;
+.carousel__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+  background-color: #ffa500;
+  border-radius: 10px;
+}
+
+.card__img {
+  height: 200px;
+  background-color: transparent;
+}
+
+.card__texto {
+  background-color: transparent;
+  text-align: center;
 }
 
 .conteudo__titulo {
   margin-left: 15px;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .conteudo__btn {
